[gd_scene load_steps=19 format=2]

[ext_resource path="res://scripts/Restart.gd" type="Script" id=1]
[ext_resource path="res://fonts/BabelStoneModern.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFont" id=8]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="InputEventKey" id=9]
pressed = true
scancode = 82

[sub_resource type="ShortCut" id=10]
shortcut = SubResource( 9 )

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="InputEventKey" id=15]
scancode = 69

[sub_resource type="ShortCut" id=16]
shortcut = SubResource( 15 )

[node name="Restart" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -346.5
margin_top = -145.5
margin_right = 346.5
margin_bottom = 145.5
color = Color( 0.85098, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="labelGameOver" type="Label" parent="ColorRect"]
anchor_right = 1.0
margin_top = 20.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 1 )
text = "GAME OVER!"
align = 1

[node name="labelScore" type="Label" parent="ColorRect"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -21.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 2 )
text = "Score: XX"
align = 1
valign = 1

[node name="btnRestart" type="Button" parent="ColorRect"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.5
margin_top = -79.5
margin_right = 246.5
margin_bottom = -19.5
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
shortcut = SubResource( 10 )
text = "restart [r]"

[node name="btnETMenu" type="Button" parent="ColorRect"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -345.5
margin_top = -79.5
margin_right = -19.5
margin_bottom = -19.5
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
shortcut = SubResource( 16 )
text = "exit to menu [e]"
[connection signal="pressed" from="ColorRect/btnRestart" to="." method="_on_btnRestart_pressed"]
[connection signal="pressed" from="ColorRect/btnETMenu" to="." method="_on_btnETMenu_pressed"]
